type Query {
  _empty: String
  """
  Returns the currently authenticated user. Returns null if unauthenticated.
  """
  me: User
  """Fetches a single user by ID."""
  user(id: ID!): User
  """Fetches multiple users by ID."""
  users(ids: [ID!]!): [User!]!
  """
  Fetches a single project by ID. Returns null if not found or not authorized.
  """
  project(id: ID!): Project
  """
  Fetches multiple projects by ID. Returns only those the user is authorized to view.
  """
  projects(ids: [ID!]): [Project!]!
  """Fetches a single team by ID."""
  team(id: ID!): Team
  """Fetches multiple teams by ID."""
  teams(ids: [ID!]): [Team!]!
  """Fetches a paginated list of members for a given team."""
  teamMembers(
    projectId: ID!
    teamId: ID!
    search: String
    """Forward pagination — return the first N members."""
    first: Int
    """Forward pagination — return members after this cursor."""
    after: String
    """Backward pagination — return the last N members."""
    last: Int
    """Backward pagination — return members before this cursor."""
    before: String
  ): TeamMemberConnection!
  """
  Fetches a single task by ID. Returns null if not found or not authorized.
  """
  task(id: ID!): Task
  """
  Fetches multiple tasks by ID. Returns only those the user is authorized to view.
  """
  tasks(ids: [ID!]!): [Task!]!
  """
  Simulates the cascading slippage risk for downstream tasks blocked by a delayed task.
  """
  simulateSlippage(projectId: ID!, taskId: ID!, delayDays: Int!): [SimulatedSlip!]!
  automationTemplatesCatalog(projectId: ID!): AutomationTemplatesCatalog!
  taskAutomationRules(projectId: ID!): [TaskAutomationRule!]!
}

type Mutation {
  _empty: String
  """Signs in a user and returns a JWT token."""
  signIn(email: String!, password_raw: String!): SignInPayload!
  """Starts the sign up process for a new user."""
  signUp(email: String!, username: String!, password_raw: String!): Boolean!
  """Creates a new project. Returns the created project."""
  createProject(name: String!, description: String): Project
  """Updates a project's name or description. Returns the updated project."""
  updateProject(id: ID!, version: Int!, name: String, description: String): Project
  """Permanently deletes one or more projects."""
  deleteProjects(projectIds: [ID!]!): DeleteProjectsPayload!
  """Adds one or more users as members of a project."""
  addProjectMembers(projectId: ID!, userIds: [ID!]!): AddProjectMembersPayload!
  """Removes one or more members from a project."""
  removeProjectMembers(projectId: ID!, memberIds: [ID!]!): RemoveProjectMembersPayload!
  """Creates a new team within a project."""
  createTeam(projectId: ID!, name: String!): CreateTeamPayload!
  """Permanently deletes one or more teams within a project."""
  deleteTeams(projectId: ID!, teamIds: [ID!]!): DeleteTeamsPayload!
  """Adds one or more users as members of a team."""
  addTeamMembers(projectId: ID!, teamId: ID!, userIds: [ID!]!): AddTeamMembersPayload!
  """Removes one or more members from a team."""
  removeTeamMembers(projectId: ID!, teamId: ID!, userIds: [ID!]!): RemoveTeamMembersPayload!
  """Updates a team's details with optimistic locking."""
  updateTeam(projectId: ID!, teamId: ID!, name: String!, version: Int!): UpdateTeamPayload!
  task: TaskMutation!
  createTaskAutomationRule(input: CreateTaskAutomationRuleInput!): TaskAutomationRule!
  updateTaskAutomationRule(input: UpdateTaskAutomationRuleInput!): TaskAutomationRule!
  deleteTaskAutomationRule(projectId: ID!, ruleId: ID!): DeleteAutomationRuleResult!
}

type Subscription {
  _empty: String
}

"""Relay cursor-based pagination metadata returned on every connection."""
type PageInfo {
  """Whether there are more results after the current page."""
  hasNextPage: Boolean!
  """Whether there are more results before the current page."""
  hasPreviousPage: Boolean!
  """
  Cursor of the first edge in the current page. Use with `before` to paginate backwards.
  """
  startCursor: String
  """
  Cursor of the last edge in the current page. Use with `after` to paginate forwards.
  """
  endCursor: String
}

"""An authenticated user of the application."""
type User {
  """Unique identifier for the user."""
  id: ID!
  """The user's unique username."""
  username: String!
  """The user's email address."""
  email: String!
  """The number of projects the user is a member of."""
  projectsCount: Int!
  """All projects the user is a member of."""
  projects(first: Int, after: String, last: Int, before: String): ProjectConnection!
}

"""Relay-style paginated list of users."""
type UserConnection {
  edges: [UserEdge!]!
  pageInfo: PageInfo!
}

type UserEdge {
  node: User!
  cursor: String!
}

"""Payload for the signIn mutation."""
type SignInPayload {
  token: String
}

"""A workspace that groups tasks, teams, and members together."""
type Project {
  """Unique identifier for the project."""
  id: ID!
  """Display name of the project."""
  name: String!
  """Optional description of the project's purpose or scope."""
  description: String
  """User who created this project."""
  creator: User!
  """Paginated list of members belonging to this project."""
  projectMembers(
    search: String
    """Forward pagination — return the first N members."""
    first: Int
    """Forward pagination — return members after this cursor."""
    after: String
    """Backward pagination — return the last N members."""
    last: Int
    """Backward pagination — return members before this cursor."""
    before: String
  ): ProjectMemberConnection!
  """ISO 8601 creation timestamp."""
  createdAt: String!
  """ISO 8601 last-updated timestamp."""
  updatedAt: String
  version: Int!
  projectMembersCount: Int!
  tasksCount: Int!
  teamsCount: Int!
  """Paginated list of teams within this project."""
  teams(
    search: String
    """Forward pagination — return the first N teams."""
    first: Int
    """Forward pagination — return teams after this cursor."""
    after: String
    """Backward pagination — return the last N teams."""
    last: Int
    """Backward pagination — return members before this cursor."""
    before: String
  ): TeamConnection!
  """
  Paginated list of all tasks in this project.
  Optionally filtered by team or assigned member.
  """
  projectTasks(
    teamId: ID
    memberId: ID
    search: String
    status: String
    priority: Int
    """Forward pagination — return the first N tasks."""
    first: Int
    """Forward pagination — return tasks after this cursor."""
    after: String
    """Backward pagination — return the last N tasks."""
    last: Int
    """Backward pagination — return results before this cursor."""
    before: String
  ): TaskConnection!
  """
  Tasks assigned to the currently authenticated user within this project.
  """
  assignedTasks(
    """Forward pagination — return the first N tasks."""
    first: Int
    """Forward pagination — return tasks after this cursor."""
    after: String
    """Backward pagination — return the last N tasks."""
    last: Int
    """Backward pagination — return results before this cursor."""
    before: String
  ): TaskConnection!
  """Paginated list of all task links within this project."""
  projectLinks(
    """Forward pagination — return the first N links."""
    first: Int
    """Forward pagination — return links after this cursor."""
    after: String
    """Backward pagination — return the last N links."""
    last: Int
    """Backward pagination — return links before this cursor."""
    before: String
  ): TaskLinkConnection!
}

"""A membership record joining a user to a project."""
type ProjectMember {
  """Unique identifier for this membership record."""
  id: ID!
  """The project this membership belongs to."""
  project: Project!
  """The user who is a member of the project."""
  user: User
  """ISO 8601 timestamp of when the user joined the project."""
  createdAt: String!
  """
  Optimistic-concurrency version counter.
  Incremented on every write. Use to detect stale updates.
  """
  version: Int!
}

"""Relay-style paginated list of projects."""
type ProjectConnection {
  edges: [ProjectEdge!]!
  pageInfo: PageInfo!
  """Total number of projects matching the query, regardless of pagination."""
  totalCount: Int
}

type ProjectEdge {
  node: Project!
  cursor: String!
}

"""Relay-style paginated list of project members."""
type ProjectMemberConnection {
  edges: [ProjectMemberEdge!]!
  pageInfo: PageInfo!
}

type ProjectMemberEdge {
  node: ProjectMember!
  cursor: String!
}

type AddProjectMembersPayload {
  success: Boolean!
}

type RemoveProjectMembersPayload {
  success: Boolean!
}

type DeleteProjectsPayload {
  success: Boolean!
  """Number of projects successfully deleted."""
  deletedCount: Int!
}

"""A group of users collaborating within a project."""
type Team {
  """Unique identifier for the team."""
  id: ID!
  """Display name of the team."""
  name: String!
  """Project this team belongs to."""
  project: Project
  """Paginated list of members belonging to this team."""
  members(
    """Forward pagination — return the first N members."""
    first: Int
    """Forward pagination — return members after this cursor."""
    after: String
    """Backward pagination — return the last N members."""
    last: Int
    """Backward pagination — return members before this cursor."""
    before: String
  ): TeamMemberConnection!
  """Paginated list of tasks assigned to this team."""
  tasks(
    """Forward pagination — return the first N tasks."""
    first: Int
    """Forward pagination — return tasks after this cursor."""
    after: String
    """Backward pagination — return the last N tasks."""
    last: Int
    """Backward pagination — return tasks before this cursor."""
    before: String
  ): TaskConnection!
  """User who created this team."""
  createdBy: User!
  """ISO 8601 creation timestamp."""
  createdAt: String!
  """ISO 8601 last-updated timestamp."""
  updatedAt: String
  version: Int!
  """Number of members in the team."""
  membersCount: Int!
  """Number of tasks assigned to the team."""
  tasksCount: Int!
}

"""A membership record joining a user to a team."""
type TeamMember {
  """Unique identifier for this membership record."""
  id: ID!
  """The user who is a member of the team."""
  user: User
  """The team this membership belongs to."""
  team: Team
  """ISO 8601 timestamp of when the user joined the team."""
  createdAt: String!
  """
  Optimistic-concurrency version counter.
  Incremented on every write. Use to detect stale updates.
  """
  version: Int!
}

"""Relay-style paginated list of teams."""
type TeamConnection {
  edges: [TeamEdge!]!
  pageInfo: PageInfo!
}

type TeamEdge {
  node: Team!
  cursor: String!
}

"""Relay-style paginated list of team members."""
type TeamMemberConnection {
  edges: [TeamMemberEdge!]!
  pageInfo: PageInfo!
}

type TeamMemberEdge {
  node: TeamMember!
  cursor: String!
}

type CreateTeamPayload {
  success: Boolean!
  """The newly created team."""
  team: Team
}

type DeleteTeamsPayload {
  success: Boolean!
  """Number of teams successfully deleted."""
  deletedCount: Int!
}

type AddTeamMembersPayload {
  success: Boolean!
  """Number of members successfully added."""
  addedCount: Int!
}

type RemoveTeamMembersPayload {
  success: Boolean!
  """Number of members successfully removed."""
  removedCount: Int!
}

type UpdateTeamPayload {
  success: Boolean!
  """The updated team."""
  team: Team
}

input CreateTaskInput {
  """Project to create the task in."""
  projectId: ID!
  """Short, human-readable title."""
  title: String!
  """Full description of the task's goal or acceptance criteria."""
  description: String
  """Initial lifecycle status. Defaults to server-defined value if omitted."""
  status: String
  """Initial numeric priority. Lower is higher urgency."""
  priority: Int
  """Optional ISO 8601 due date."""
  dueDate: String
}

input UpdateTaskInput {
  """Project the task belongs to."""
  projectId: ID!
  """Optimistic lock version."""
  version: Int!
  """Updated title. Omit to leave unchanged."""
  title: String
  """Updated description. Omit to leave unchanged."""
  description: String
  """Updated status. Omit to leave unchanged."""
  status: String
  """Team to assign this task to."""
  teamId: ID
  """Member to assign this task to."""
  memberId: ID
  """Updated numeric priority. Lower is higher urgency."""
  priority: Int
  """
  Updated ISO 8601 due date. Omit to leave unchanged, or set to null to clear.
  """
  dueDate: String
}

input CreateTaskLinkInput {
  """Project both tasks belong to."""
  projectId: ID!
  """The originating task (dependency source)."""
  sourceTaskId: ID!
  """The destination task (dependency target)."""
  targetTaskId: ID!
  """Semantic label for the relationship (e.g. "blocks", "relates to")."""
  label: String!
}

input UpdateTaskLinkInput {
  """Project both tasks belong to."""
  projectId: ID!
  """The link to update."""
  linkId: ID!
  """The originating task (dependency source)."""
  sourceTaskId: ID
  """The destination task (dependency target)."""
  targetTaskId: ID
  """Semantic label for the relationship."""
  label: String
}

"""Namespaced task mutations."""
type TaskMutation {
  """Creates a new task in the given project."""
  create(input: CreateTaskInput!): Task!
  """
  Partially updates a task. Only supplied fields are changed; omitted fields are left as-is.
  """
  update(taskId: ID!, input: UpdateTaskInput!): Task!
  """Permanently deletes a task. Returns the ID of the deleted task."""
  delete(projectId: ID!, taskId: ID!): ID!
  """Creates a directed, labelled link between two tasks."""
  createLink(input: CreateTaskLinkInput!): TaskLink!
  """Removes a task link by ID. Returns the ID of the deleted link."""
  deleteLink(projectId: ID!, linkId: ID!): ID!
  """Updates a task link (label, source, or target)."""
  updateLink(input: UpdateTaskLinkInput!): TaskLink!
}

enum RiskLevel {
  LOW
  MEDIUM
  HIGH
}

type SimulatedSlip {
  taskId: ID!
  title: String!
  originalDueDate: String
  simulatedDueDate: String
  slipDays: Int!
  riskLevel: RiskLevel!
  bufferRemainingDays: Int!
}

enum InputType {
  SELECT
  TEXT
  NUMBER
  NONE
  TEAM_MEMBER
  COMPOSITE
}

enum AutomationMode {
  SYNC
  ASYNC
}

type AutomationOption {
  value: String!
  label: String!
}

type TemplateField {
  key: String!
  inputType: InputType!
  label: String!
  placeholder: String
  staticOptions: [AutomationOption!]
  dynamicOptionsSource: String
}

type ValueTemplate {
  inputType: InputType!
  label: String!
  placeholder: String
  staticOptions: [AutomationOption!]
  dynamicOptionsSource: String
  fields: [TemplateField!]
}

type TriggerTemplate {
  type: String!
  label: String!
  description: String!
  valueTemplate: ValueTemplate!
  supportedModes: [AutomationMode!]!
  """
  Condition types that are semantically valid for this trigger.
  The frontend uses this list to filter the Condition step in the rule wizard.
  """
  compatibleConditions: [String!]!
  """
  Action types that are semantically valid for this trigger.
  The frontend uses this list to filter the Action step in the rule wizard.
  """
  compatibleActions: [String!]!
}

type ConditionTemplate {
  type: String!
  label: String!
  description: String!
  valueTemplate: ValueTemplate!
}

type ActionTemplate {
  type: String!
  label: String!
  description: String!
  valueTemplate: ValueTemplate!
  supportedModes: [AutomationMode!]!
}

type AutomationTemplatesCatalog {
  triggers: [TriggerTemplate!]!
  conditions: [ConditionTemplate!]!
  actions: [ActionTemplate!]!
}

type TaskAutomationRule {
  id: ID!
  projectId: ID!
  name: String!
  isActive: Boolean!
  isSync: Boolean!
  triggerType: String!
  triggerValue: String
  conditionType: String!
  conditionValue: String
  actionType: String!
  actionValue: String
  version: Int!
}

input CreateTaskAutomationRuleInput {
  projectId: ID!
  name: String!
  isActive: Boolean
  isSync: Boolean!
  triggerType: String!
  triggerValue: String
  conditionType: String!
  conditionValue: String
  actionType: String!
  actionValue: String
}

input UpdateTaskAutomationRuleInput {
  projectId: ID!
  ruleId: ID!
  version: Int!
  name: String
  isActive: Boolean
  isSync: Boolean
  triggerType: String
  triggerValue: String
  conditionType: String
  conditionValue: String
  actionType: String
  actionValue: String
}

type DeleteAutomationRuleResult {
  success: Boolean!
  ruleId: ID!
}

"""A single unit of work within a project."""
type Task {
  """Unique identifier for the task."""
  id: ID!
  """Short, human-readable title."""
  title: String!
  """Full description of the task's goal or acceptance criteria."""
  description: String!
  """Current lifecycle status (e.g. "todo", "in_progress", "done")."""
  status: String!
  """Numeric priority. Lower values indicate higher urgency."""
  priority: Int!
  """Optional ISO 8601 due date."""
  dueDate: String
  """Project this task belongs to."""
  project: Project
  """Team responsible for this task."""
  team: Team
  """Individual user assigned to this task."""
  assignedMember: User
  """
  All task links connected to this task up to a given depth.
  Use `direction` to filter to incoming or outgoing links only.
  The client is responsible for building the graph from the returned edges.
  """
  neighbourLinks(
    """Filter to incoming, outgoing, or both directions. Defaults to both."""
    direction: NeighbourDirection = both
    """
    Maximum hop depth to traverse from this task.
    1 = direct neighbours only. Server may enforce a hard maximum.
    """
    depthLimit: Int
    """Forward pagination — return the first N links."""
    first: Int
    """Forward pagination — return links after this cursor."""
    after: String
    """Backward pagination — return the last N links."""
    last: Int
    """Backward pagination — return results before this cursor."""
    before: String
  ): TaskLinkConnection!
  version: Int!
  """User who created this task."""
  createdBy: User!
  """User who last modified this task."""
  updatedBy: User!
  """ISO 8601 creation timestamp."""
  createdAt: String!
  """ISO 8601 last-updated timestamp."""
  updatedAt: String!
}

"""
A directed, labelled edge between two tasks. Represents a dependency or relationship.
"""
type TaskLink {
  """Unique identifier for the link."""
  id: ID!
  """Project this link belongs to."""
  project: Project
  """The originating task (dependency source)."""
  source: Task!
  """The destination task (dependency target)."""
  target: Task!
  """
  Semantic label describing the relationship (e.g. "blocks", "relates to").
  """
  label: String!
  """User who created this link."""
  createdBy: User!
  """ISO 8601 creation timestamp."""
  createdAt: String!
  """User who last modified this link."""
  updatedBy: User
  """ISO 8601 last-updated timestamp."""
  updatedAt: String
}

"""Direction of a link relative to the focused task."""
enum NeighbourDirection {
  """Links where this task is the target."""
  incoming
  """Links where this task is the source."""
  outgoing
  """Links in either direction."""
  both
}

"""Relay-style paginated list of tasks."""
type TaskConnection {
  edges: [TaskEdge!]!
  pageInfo: PageInfo!
}

type TaskEdge {
  node: Task!
  cursor: String!
}

"""Relay-style paginated list of task links."""
type TaskLinkConnection {
  edges: [TaskLinkEdge!]!
  pageInfo: PageInfo!
}

type TaskLinkEdge {
  node: TaskLink!
  cursor: String!
}

"""
Aggregated count of a link label across a set of tasks. Useful for summarising dependency types in list views.
"""
type TaskLabelCount {
  label: String!
  count: Int!
}

schema {
  query: Query
  mutation: Mutation
  subscription: Subscription
}